Add Finnhub integration test suite

--- a/integration-test/.env.test
+++ b/integration-test/.env.test
@@ -1,13 +1,16 @@
 # Polygon API credentials
 POLYGON_API_KEY=OouEfNpYvDivPr_MiG4_r4NWTDXEbct9
+FINNHUB_API_KEY=d4v1uf1r01qnm7pp0kk0d4v1r01qnm7pp0kkg
 
 # Broker Simulator Host (running on elanlinux)
 SIMULATOR_HOST=elanlinux
 CONTROL_PORT=8000
 POLYGON_PORT=8200
+FINNHUB_PORT=8300
 
 # Real Polygon API
 POLYGON_BASE_URL=https://api.polygon.io
+FINNHUB_BASE_URL=https://finnhub.io/api/v1
 
 # Test Configuration
 TEST_SYMBOLS=AAPL,MSFT,AMZN
