--- a/integration-test/.env.test
+++ b/integration-test/.env.test
@@ -16,3 +16,5 @@ FINNHUB_BASE_URL=https://finnhub.io/api/v1
 TEST_SYMBOLS=AAPL,MSFT,AMZN
 TEST_START_DATE=2025-01-13
 TEST_END_DATE=2025-01-17
+FINNHUB_TEST_START_DATE=2025-12-20
+FINNHUB_TEST_END_DATE=2025-12-27
