Add Alpaca trading integration tests

--- a/integration-test/.env.test
+++ b/integration-test/.env.test
@@ -5,6 +5,7 @@ FINNHUB_API_KEY=d4v1uf1r01qnm7pp0kk0d4v1uf1r01qnm7pp0kkg
 # Broker Simulator Host (running on elanlinux)
 SIMULATOR_HOST=elanlinux
 CONTROL_PORT=8000
+ALPACA_PORT=8100
 POLYGON_PORT=8200
 FINNHUB_PORT=8300
 
