Compare Alpaca simulator with paper API

--- a/integration-test/.env.test
+++ b/integration-test/.env.test
@@ -8,6 +8,7 @@ CONTROL_PORT=8000
 ALPACA_PORT=8100
 POLYGON_PORT=8200
 FINNHUB_PORT=8300
+ALPACA_BASE_URL=https://paper-api.alpaca.markets
 
 # Real Polygon API
 POLYGON_BASE_URL=https://api.polygon.io
