--- a/config/settings.json
+++ b/config/settings.json
@@ -34,8 +34,8 @@
     "fixed_slippage_bps": 0.0
   },
   "websocket": {
-    "queue_size": 1000,
-    "overflow_policy": "drop_oldest",
+    "queue_size": 0,
+    "overflow_policy": "block",
     "batch_size": 50
   },
   "logging": {
