Revert "Fix simulator streaming and timing"
This reverts commit f93c151b84136dbcef9c0f0d2f9f0b8357df7b46.

--- a/config/settings.json
+++ b/config/settings.json
@@ -34,8 +34,8 @@
     "fixed_slippage_bps": 0.0
   },
   "websocket": {
-    "queue_size": 0,
-    "overflow_policy": "block",
+    "queue_size": 1000,
+    "overflow_policy": "drop_oldest",
     "batch_size": 50
   },
   "logging": {
