Revert "Fix ClickHouse reconnection race conditions"
This reverts commit 8239b400becd42440232292797c9734d03153dd2.

--- a/config/settings.json
+++ b/config/settings.json
@@ -12,7 +12,7 @@
     "port": 5432,
     "database": "broker_sim",
     "user": "postgres",
-    "password": "broker123"
+    "password": ""
   },
   "services": {
     "control_port": 8000,
