Add Finnhub news stream and fix startup delay from future news

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(broker_tests
     rate_limiter_test.cpp
     matching_engine_test.cpp
     session_manager_test.cpp
+    finnhub_news_stream_test.cpp
     market_hours_test.cpp
     time_engine_test.cpp
     performance_test.cpp
